🎉 Updated wave styles in CSS for a vibrant look. 🔄 Refactored CountUp component for improved readability. 🚧 Fixed modal layout issues for better user experience. 💄 Enhanced styling of modal actions and links. 🔧 Adjusted modal content spacing for a polished display.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -171,16 +171,16 @@ body.modal-active {
   z-index: 1;
 }
 
-#modal-container.seven {
+#modal-container.coin_animation_modal {
   transform: scale(1);
 }
 
-#modal-container.seven .modal-background {
+#modal-container.coin_animation_modal .modal-background {
   background: rgba(0, 0, 0, .0);
   animation: fadeIn 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
-#modal-container.seven .modal-background .modal {
+#modal-container.coin_animation_modal .modal-background .modal {
   height: 75px;
   width: 75px;
   border-radius: 50%;
@@ -210,6 +210,7 @@ box-shadow: inset 0px -1px 6px 0px rgba(66, 68, 90, 1); */
   width: 100%;
   height: 100%;
   z-index: 9999999;
+  box-shadow: 1px 2px 1px rgba(128, 128, 128, 0.432);
 }
 
 
@@ -232,7 +233,7 @@ box-shadow: inset 0px -1px 6px 0px rgba(66, 68, 90, 1); */
 
 */
 
-#modal-container.seven .modal-background .modal {
+#modal-container.coin_animation_modal .modal-background .modal {
   background-color: red;
   border-radius: 12px;
   background-color: white;
@@ -249,31 +250,31 @@ box-shadow: inset 0px -1px 6px 0px rgba(66, 68, 90, 1); */
   text-align: left;
 }
 
-#modal-container.seven .modal-background .modal h2,
-#modal-container.seven .modal-background .modal p {
+#modal-container.coin_animation_modal .modal-background .modal h2,
+#modal-container.coin_animation_modal .modal-background .modal p {
   opacity: 0;
   position: relative;
   animation: modalContentFadeIn 0.5s 1.4s linear forwards;
 }
 
-#modal-container.seven.out {
+#modal-container.coin_animation_modal.out {
   animation: slowFade 0.5s 1.5s linear forwards;
 }
 
-#modal-container.seven.out .modal-background {
+#modal-container.coin_animation_modal.out .modal-background {
   background-color: rgba(0, 0, 0, .7);
   animation: fadeToRed 2s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
-#modal-container.seven.out .modal-background .modal {
+#modal-container.coin_animation_modal.out .modal-background .modal {
   border-radius: 3px;
   height: 162px;
   width: 227px;
   animation: killShot 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
-#modal-container.seven.out .modal-background .modal h2,
-#modal-container.seven.out .modal-background .modal p {
+#modal-container.coin_animation_modal.out .modal-background .modal h2,
+#modal-container.coin_animation_modal.out .modal-background .modal p {
   animation: modalContentFadeOut 0.5s 0.5 cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
@@ -753,3 +754,46 @@ box-shadow: inset 0px -1px 6px 0px rgba(66, 68, 90, 1); */
     transform: scale(0);
   }
 }
+.wave-container {
+  position: relative;
+  background: #2c3e50;
+  height: 50vh;
+}
+
+.wave {
+  position: absolute;
+  height: 100px;
+  width: 100%;
+  background: #73BA24;
+  /* bottom: 0; */
+  left: 0;
+  top: 0;
+  z-index: -10000000005;
+}
+
+.wave::before, .wave::after {
+  content: "";
+  display: block;
+  position: absolute;
+  border-radius: 100% 50%;
+}
+
+.wave::before {
+  width: 55%;
+  height: 109%;
+  background-color: #fff;
+  right: -1.5%;
+  top: 60%;
+}
+.wave::after {
+  width: 55%;
+  height: 100%;
+  background-color: #73BA24;
+  left: -1.5%;
+  top: 40%;
+}
+
+
+
+
+
